[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/toat.png" type="Texture" id=1]
[ext_resource path="res://str/Actors/HardcorePlayer.gd" type="Script" id=2]
[ext_resource path="res://str/addons/KinematicBody2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://str/addons/Lazer2.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Font.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://str/Buttons/Play.tscn" type="PackedScene" id=6]
[ext_resource path="res://str/Buttons/Pause.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "color_changing"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("toat:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.307786, 2.37842 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 5 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -12.0476, 8.78662, -29.2639, 7.4623, -32.972, 22.5596, -37.7396, 6.40283, -54.9559, -7.89992, -35.091, -27.7648, -10.9882, -33.5919, 11.2605, -28.0297, 26.6228, -17.9648, 35.8931, -11.0783, 53.9039, -10.5486, 59.731, -7.10532, 53.1093, -2.6026, 39.6012, -2.33774, 31.6552, -2.07288, 23.4444, 3.4893, 17.8822, 5.07851, 15.2335, 22.2948, 10.4659, 8.2569 )

[node name="toat" type="Sprite" parent="."]
scale = Vector2( 0.246132, 0.218392 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 249.023, 3.09946 )
current = true

[node name="Arrow" parent="." instance=ExtResource( 3 )]
position = Vector2( -1, 0 )

[node name="Detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Detector"]
scale = Vector2( 1.05379, 1.21191 )
polygon = PoolVector2Array( -29.4308, 6.75902, -27.6178, 14.5408, -30.5768, 19.1353, -34.3812, 15.0922, -38.2696, 6.75902, -47.6966, 0.757355, -52.9805, -7.32896, -48.1193, -12.4748, -34.3812, -22.3989, -12.4002, -28.2799, 8.31265, -24.9718, 23.5303, -17.0693, 35.9766, -9.85799, 54.1769, -8.98298, 58.6153, -5.30738, 52.0633, -1.44801, 41.9182, -1.63179, 32.4411, -1.37271, 18.2989, 5.3448, 17.401, 14.7246, 14.8647, 18.9516, 10.0035, 14.9084, 8.94673, 7.37343, -13.2456, 7.18965 )

[node name="DetectorLazer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectorLazer"]
scale = Vector2( 1.05379, 1.21191 )
polygon = PoolVector2Array( -29.4308, 6.75902, -27.6178, 14.5408, -30.5768, 19.1353, -34.3812, 15.0922, -38.2696, 6.75902, -47.6966, 0.757355, -52.9805, -7.32896, -48.1193, -12.4748, -34.3812, -22.3989, -12.4002, -28.2799, 8.31265, -24.9718, 23.5303, -17.0693, 35.9766, -9.85799, 54.1769, -8.98298, 58.6153, -5.30738, 52.0633, -1.44801, 41.9182, -1.63179, 32.4411, -1.37271, 18.2989, 5.3448, 17.401, 14.7246, 14.8647, 18.9516, 10.0035, 14.9084, 8.94673, 7.37343, -13.2456, 7.18965 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/color_changing = SubResource( 1 )

[node name="TimerRec" type="Timer" parent="."]

[node name="KinematicBody2D" parent="." instance=ExtResource( 4 )]
position = Vector2( -328.465, -294.924 )

[node name="Control" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 212.112
margin_top = -294.924
margin_right = 252.112
margin_bottom = -254.924
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.4058
margin_top = -20.0
margin_right = 19.5942
margin_bottom = 49.0
rect_scale = Vector2( 0.978688, 0.671579 )
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" parent="." instance=ExtResource( 6 )]
margin_left = 801.15
margin_top = -359.955
margin_right = 1101.15
margin_bottom = -215.955
rect_scale = Vector2( 0.273281, 0.273281 )
text = "||"
script = ExtResource( 7 )
[connection signal="area_entered" from="Detector" to="." method="_on_Detector_area_entered"]
[connection signal="area_entered" from="DetectorLazer" to="." method="_on_DetectorLazer_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerRec" to="." method="_on_TimerRec_timeout"]
